Code Review - test/persistence package, application.properties, import.sql